--- a/Handson/.classpath
+++ b/Handson/.classpath
@@ -6,91 +6,23 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/byte-buddy-1.8.15.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/cglib-nodep-3.2.4.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/commons-codec-1.10.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/commons-exec-1.3.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/commons-logging-1.2.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/gson-2.8.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/guava-21.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/guava-25.0-jre.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/httpclient-4.5.3.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/httpcore-4.4.6.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/jna-4.1.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/jna-platform-4.1.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/okhttp-3.11.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/okio-1.14.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/selenium-api-3.4.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/selenium-chrome-driver-3.4.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/joyka/Documents/Selenium/selenium-java-3.141.59/libs/selenium-remote-driver-3.4.0.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/client-combined-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/client-combined-3.141.59-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/byte-buddy-1.8.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/okhttp-3.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/okio-1.14.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/selenium-api-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/selenium-chrome-driver-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/selenium-edge-driver-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/selenium-firefox-driver-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/selenium-ie-driver-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/selenium-java-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/selenium-opera-driver-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/selenium-remote-driver-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/selenium-safari-driver-3.141.59.jar"/>
+	<classpathentry kind="lib" path="C:/Users/joyka/Documents/selenium-java-3.141.59/libs/selenium-support-3.141.59.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
